[package]
name = "zakkistore-sdk"
version = "1.0.1"
edition = "2021"
description = "Official Rust client library for Zakki Store B2B API Gateway"
authors = ["ZakkiXD"]
license = "MIT"
repository = "https://github.com/MrLow12/zakkistore-sdk-rust"

[dependencies]
ureq = { version = "2.9.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
